--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -2,36 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/light_orange"
-    android:padding="20dp"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <!-- Back Button -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginBottom="30dp"
         android:gravity="start"
-        android:layout_marginBottom="30dp">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="60dp"
             android:layout_height="50dp"
-            android:padding="4dp"
             android:background="@android:color/black"
-            android:gravity="center">
+            android:gravity="center"
+            android:padding="4dp">
 
             <Button
                 android:id="@+id/buttonGoBackForgot"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="←\n"
-                android:textSize="24sp"
-                android:textColor="@android:color/black"
                 android:background="#FFD580"
+                android:elevation="0dp"
                 android:gravity="center"
-                android:elevation="0dp"/>
+                android:text="←\n"
+                android:textColor="@android:color/black"
+                android:textSize="24sp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -40,32 +40,32 @@
         android:id="@+id/editTextForgotPasswordEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@android:color/darker_gray"
         android:hint="@string/enter_email"
         android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginBottom="20dp"/>
+        android:padding="10dp" />
 
     <!-- Reset Password Button -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:background="@android:color/black"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
+        android:layout_marginEnd="20dp"
+        android:background="@android:color/black"
+        android:padding="4dp">
 
         <Button
             android:id="@+id/buttonResetPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="@string/reset_password"
-            android:textSize="20sp"
-            android:padding="10dp"
-            android:textColor="@android:color/black"
             android:background="#FFD580"
+            android:elevation="0dp"
             android:gravity="center"
-            android:elevation="0dp"/>
+            android:padding="10dp"
+            android:text="@string/reset_password"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
     </LinearLayout>
 
 </LinearLayout>
