--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,37 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/light_orange"
-    android:padding="20dp"
-    android:gravity="center_horizontal">
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <!-- Back Button (Top-Left) -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginBottom="30dp"
         android:gravity="start"
-        android:layout_marginBottom="30dp">
+        android:orientation="horizontal">
 
         <!-- Back Button Container -->
         <LinearLayout
             android:layout_width="60dp"
             android:layout_height="50dp"
-            android:padding="4dp"
             android:background="@android:color/black"
-            android:gravity="center">
+            android:gravity="center"
+            android:padding="4dp">
 
             <Button
                 android:id="@+id/buttonGoBack"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="←\n"
-                android:textSize="24sp"
-                android:textColor="@android:color/black"
                 android:background="#FFD580"
+                android:elevation="0dp"
                 android:gravity="center"
-                android:elevation="0dp"/>
+                android:text="←\n"
+                android:textColor="@android:color/black"
+                android:textSize="24sp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -41,98 +41,114 @@
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
+        android:background="@android:color/darker_gray"
         android:hint="@string/enter_email"
         android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="10dp"/>
+        android:padding="10dp" />
 
     <!-- Password Input -->
-    <EditText
-        android:id="@+id/editTextPassword"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_password"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp">
+
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"
+            android:hint="@string/enter_password"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            android:layout_gravity="center_vertical"/>
+
+        <ImageView
+            android:id="@+id/buttonPeek"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginEnd="10dp"
+            android:padding="8dp"
+            android:src="@drawable/ic_eye_closed"/>
+
+    </FrameLayout>
 
     <!-- Centered Buttons Container -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:orientation="vertical">
 
         <!-- Sign In Button -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:background="@android:color/black"
-            android:layout_marginBottom="15dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="15dp"
+            android:background="@android:color/black"
+            android:padding="4dp">
 
             <Button
                 android:id="@+id/buttonLogin"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@string/btn_login"
-                android:textSize="20sp"
-                android:padding="10dp"
-                android:textColor="@android:color/black"
                 android:background="#FFD580"
+                android:elevation="0dp"
                 android:gravity="center"
-                android:elevation="0dp"/>
+                android:padding="10dp"
+                android:text="@string/btn_login"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <!-- Forgot Password Button (NEW) -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:background="@android:color/black"
-            android:layout_marginBottom="15dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="15dp"
+            android:background="@android:color/black"
+            android:padding="4dp">
 
             <Button
                 android:id="@+id/buttonForgotPassword"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@string/forgot_password"
-                android:textSize="18sp"
-                android:padding="10dp"
-                android:textColor="@android:color/black"
                 android:background="#FFD580"
+                android:elevation="0dp"
                 android:gravity="center"
-                android:elevation="0dp"/>
+                android:padding="10dp"
+                android:text="@string/forgot_password"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <!-- Register Button -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:background="@android:color/black"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginEnd="20dp"
+            android:background="@android:color/black"
+            android:padding="4dp">
 
             <Button
                 android:id="@+id/buttonRegister"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@string/register"
-                android:textSize="20sp"
-                android:padding="10dp"
-                android:textColor="@android:color/black"
                 android:background="#FFD580"
+                android:elevation="0dp"
                 android:gravity="center"
-                android:elevation="0dp"/>
+                android:padding="10dp"
+                android:text="@string/register"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
         </LinearLayout>
 
     </LinearLayout>
