--- a/app/src/main/res/layout/activity_shared_habit_detail.xml
+++ b/app/src/main/res/layout/activity_shared_habit_detail.xml
@@ -15,10 +15,9 @@
         android:paddingStart="20dp">
 
         <TextView
-            android:id="@+id/textAddHabit"
+            android:id="@+id/textHeaderHabitName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/add_habit"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -44,18 +43,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@android:color/white"
+                android:enabled="false"
                 android:hint="@string/habit_name"
                 android:padding="12dp"
                 android:textSize="18sp" />
 
-            <!-- Habit Description -->
-
+            <!-- Description -->
             <EditText
                 android:id="@+id/editTextHabitDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@android:color/white"
+                android:enabled="false"
                 android:gravity="top"
                 android:hint="@string/habit_description"
                 android:inputType="textMultiLine"
@@ -65,7 +65,6 @@
 
             <!-- Habit Type -->
             <TextView
-                android:id="@+id/textHabitType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -87,10 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_dark"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:minWidth="120dp"
-                    android:minHeight="50dp"
+                    android:enabled="false"
                     android:padding="12dp"
                     android:text="@string/build_habit"
                     android:textColor="@android:color/white"
@@ -103,10 +99,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_dark"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:minWidth="120dp"
-                    android:minHeight="50dp"
+                    android:enabled="false"
                     android:padding="12dp"
                     android:text="@string/quit_habit"
                     android:textColor="@android:color/white"
@@ -115,7 +108,6 @@
 
             <!-- Goal Period -->
             <TextView
-                android:id="@+id/textGoalPeriod"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -130,11 +122,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@android:color/white"
+                android:enabled="false"
                 android:padding="12dp" />
 
-            <!-- Goal Value -->
+            <!-- Goal Value and Measurement -->
             <TextView
-                android:id="@+id/textGoalValue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -150,39 +142,38 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <!-- Goal Value Input -->
                 <EditText
                     android:id="@+id/editTextGoalValue"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:background="@android:color/white"
+                    android:enabled="false"
                     android:gravity="center"
                     android:inputType="numberDecimal"
                     android:padding="8dp"
                     android:textSize="16sp" />
 
-                <!-- Measurement Selection -->
                 <Spinner
                     android:id="@+id/spinnerMeasurementUnit"
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:background="@android:color/white"
+                    android:enabled="false"
                     android:padding="8dp" />
 
-                <!-- Period Label -->
                 <TextView
                     android:id="@+id/textViewMeasurementPeriod"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="/day"
+                    android:text="/Daily"
                     android:textColor="@android:color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <!-- Custom Measurement Input (Initially Hidden) -->
+            <!-- Custom Measurement -->
             <EditText
                 android:id="@+id/editTextCustomMeasurement"
                 android:layout_width="120dp"
@@ -190,43 +181,41 @@
                 android:layout_marginStart="98dp"
                 android:layout_marginTop="8dp"
                 android:background="@android:color/white"
+                android:enabled="false"
                 android:padding="8dp"
                 android:textSize="16sp"
                 android:visibility="gone" />
 
+            <!-- Action Buttons -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <!-- Share Habit Checkbox (Shown only if logged in & online) -->
-                <CheckBox
-                    android:id="@+id/checkboxShareHabit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="6dp"
-                    android:text="@string/share_habit"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    android:visibility="gone" />
-
-                <!-- Save Habit Button -->
                 <Button
-                    android:id="@+id/buttonSaveHabit"
+                    android:id="@+id/buttonAction"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="@color/light_orange"
                     android:padding="12dp"
-                    android:text="@string/save_habit"
+                    android:text=""
                     android:textColor="@android:color/white"
                     android:textSize="18sp" />
 
+                <Button
+                    android:id="@+id/buttonCancel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/light_orange"
+                    android:padding="12dp"
+                    android:text="@string/cancel"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp" />
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
 
@@ -244,9 +233,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@android:color/black"
+            android:background="@android:color/darker_gray"
             android:drawableTop="@drawable/social_icon"
-            android:gravity="center"
             android:paddingVertical="18dp" />
 
         <Button
@@ -263,7 +251,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/darker_gray"
+            android:background="@color/black"
             android:drawableTop="@drawable/icon_add"
             android:paddingVertical="16dp" />
 
@@ -272,7 +260,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@android:color/black"
+            android:background="@color/black"
             android:drawableTop="@drawable/habits_icon"
             android:paddingVertical="18dp" />
 
@@ -285,5 +273,4 @@
             android:drawableTop="@drawable/settings_icon"
             android:paddingVertical="18dp" />
     </LinearLayout>
-
 </LinearLayout>
