--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,19 +4,6 @@
     android:layout_height="match_parent"
     android:background="#FF9800">
 
-    <!-- Internet Status (Top-Center) Remove After Testing Done -->
-    <TextView
-        android:id="@+id/textInternetStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="@string/no_internet"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:textColor="@android:color/black" />
-
     <!-- Language Selection Buttons (Top-Right) -->
     <LinearLayout
         android:id="@+id/language_container"
@@ -31,23 +18,23 @@
             android:id="@+id/btnEnglish"
             android:layout_width="50dp"
             android:layout_height="40dp"
-            android:text="EN"
-            android:textSize="14sp"
-            android:padding="5dp"
             android:backgroundTint="#FF9800"
+            android:elevation="0dp"
+            android:padding="5dp"
+            android:text="EN"
             android:textColor="@android:color/black"
-            android:elevation="0dp"/>
+            android:textSize="14sp" />
 
         <Button
             android:id="@+id/btnSlovak"
             android:layout_width="50dp"
             android:layout_height="40dp"
-            android:text="SK"
-            android:textSize="14sp"
-            android:padding="5dp"
             android:backgroundTint="#FF9800"
+            android:elevation="0dp"
+            android:padding="5dp"
+            android:text="SK"
             android:textColor="@android:color/black"
-            android:elevation="0dp"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
     <!-- Title Text (Bigger & Moved Higher) -->
@@ -66,51 +53,51 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
         android:layout_below="@id/titleText"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <!-- Use Offline Button -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:background="@android:color/black"
-            android:layout_marginBottom="20dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@android:color/black"
+            android:padding="4dp">
 
             <Button
                 android:id="@+id/button1"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@string/use_offline"
-                android:textSize="20sp"
-                android:textColor="@android:color/black"
                 android:background="#FFD580"
-                android:elevation="0dp"/>
+                android:elevation="0dp"
+                android:text="@string/use_offline"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <!-- Sign In Button -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:background="@android:color/black"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginEnd="20dp"
+            android:background="@android:color/black"
+            android:padding="4dp">
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@string/sign_in"
-                android:textSize="20sp"
-                android:padding="10dp"
-                android:textColor="@android:color/black"
                 android:background="#FFD580"
-                android:elevation="0dp" />
+                android:elevation="0dp"
+                android:padding="10dp"
+                android:text="@string/sign_in"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
         </LinearLayout>
 
     </LinearLayout>
